--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div data-role="footer" data-position="fixed">
-            <p>My footer | &copy; M2SRT 2021</p>
+            <p>My footer | &copy; M2GLSI 2021</p>
         </div>
     </div>
 </body>
